--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="col-sm-8">
         <ul class="list-group">
-            <li class="list-group-item">
+            <li class="list-group-item active">
                 <span class="glyphicon glyphicon-tag"></span> Title: {{ movie.title }}
             </li>
             <li class="list-group-item">
@@ -26,25 +26,6 @@
             <div class="panel-heading">Synopsis</div>
             <div class="panel-body">
                 <div>{{ movie.plot }}</div>
-            </div>
-        </div>
-        <div class="panel-group" id="{{ 'accordion' + movie.imdbID }}" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
-                <div class="panel-heading" role="tab" id="{{ 'heading' + movie.imdbID }}">
-                    <h4 class="panel-title">
-                        <a (click)="fetchDetails()" role="button" data-toggle="collapse" attr.data-parent="{{ '#accordion' + movie.imdbID }}" href="{{ '#collapse' + movie.imdbID }}" aria-expanded="true" attr.aria-controls="{{ 'collapse' + movie.imdbID }}">
-                        Details
-                        </a>
-                    </h4>
-                </div>
-                <div id="{{ 'collapse' + movie.imdbID }}" class="panel-collapse collapse" role="tabpanel" attr.aria-labelledby="{{ 'heading' + movie.imdbID }}">
-                    <div class="panel-body">
-                        <div *ngIf="detailsFetched == false" class="text-center">
-                            <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
-                            <span class="sr-only">Loading...</span>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
